# ft_calc

./: Cargo.toml  README.md  crops.json
src/: lib.rs  main.rs
