[package]
name = "ft_calc"
version = "0.1.0"
authors = ["louix <28579246+louix@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false}
serde_json = "1.0"
